# ahull3Dpy

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
ahull3Dpy/: LICENSE  __init__.py  ahull3Dpy.py
src/: ahull3Dpy_core.cpp
